Jann 30/objects/CRS_Review__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Archive_Date__c</fullName>
        <formula>CRS_Tracking__r.Archive_Date__c</formula>
        <inlineHelpText>Last day of the year when the CRS review record should be considered for Archive status</inlineHelpText>
        <label>Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BBN__c</fullName>
        <formula>CRS_Tracking__r.BBN__c</formula>
        <label>BBN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beverage_Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Beverage Category</label>
        <referenceTo>CRS_Beverage_Category__c</referenceTo>
        <relationshipLabel>CRS Reviews</relationshipLabel>
        <relationshipName>CRS_Reviews_for_Beverage_Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRS_Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <referenceTo>CRS_Brand__c</referenceTo>
        <relationshipLabel>CRS Reviews</relationshipLabel>
        <relationshipName>CRS_Reviews_for_Brand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRS_Business_Unit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>CRS_Business_Unit__c</referenceTo>
        <relationshipLabel>CRS Reviews</relationshipLabel>
        <relationshipName>CRS_Reviews_for_Business_Unit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRS_Country_Names__c</fullName>
        <label>Country</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Document_Title__c</fullName>
        <formula>CRS_Tracking__r.CRS_Document_Title__c</formula>
        <label>Document Title (not used)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Flavor_Names__c</fullName>
        <label>Flavor</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Group</label>
        <referenceTo>CRS_Group__c</referenceTo>
        <relationshipLabel>CRS Reviews</relationshipLabel>
        <relationshipName>CRS_Reviews_for_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRS_Media_Type_Names__c</fullName>
        <label>Media Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Package_Type_Names__c</fullName>
        <label>Package Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Product_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <referenceTo>CRS_CRS_Product__c</referenceTo>
        <relationshipLabel>CRS Reviews</relationshipLabel>
        <relationshipName>CRS_Reviews_for_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRS_Tracking__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CRS Tracking #</label>
        <referenceTo>CRS__c</referenceTo>
        <relationshipLabel>CRS Reviews</relationshipLabel>
        <relationshipName>CRS_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRS_Type_Names__c</fullName>
        <label>CRS Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Reviewers__c</fullName>
        <label>Current Reviewers</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_reviewer_FGD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current reviewer: FGD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_reviewer_FL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current reviewer: FL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_reviewer_PAC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current reviewer: PAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_reviewer_SRA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current reviewer: SRA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Initiated__c</fullName>
        <label>Date Initiated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Individual_CRS__c</fullName>
        <formula>CRS_Tracking__r.Individual_CRSSum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Individual CRS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiated For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CRS_Reviews_for_Initiated_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MTR_Day_Count__c</fullName>
        <formula>CRS_Tracking__r.MTR_Day_Count__c</formula>
        <label>Days Under Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Size__c</fullName>
        <formula>CRS_Tracking__r.Package_Size__c</formula>
        <label>Package Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAG_Status__c</fullName>
        <formula>CRS_Tracking__r.RAG_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RAG Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set to True when related CRS record is Abandoned,Approved,Rejected,Disapproved</inlineHelpText>
        <label>Read-Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Under Review</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Review Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_Status_formula__c</fullName>
        <formula>TEXT(Review_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_CRS__c</fullName>
        <formula>CRS_Tracking__r.Total_CRS__c</formula>
        <label>Total CRS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Page_Count__c</fullName>
        <formula>CRS_Tracking__r.Total_Page_Count__c</formula>
        <label>Total Page Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CRS Review</label>
    <listViews>
        <fullName>All_CRS_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Review_Status__c</columns>
        <columns>MTR_Day_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS_Review__c.CRS_Review</value>
        </filters>
        <label>All CRS Reviews</label>
        <sharedTo>
            <group>CRS_Business_Admin</group>
            <group>CRS_Corporate_Level</group>
            <group>CRS_Review_Only</group>
            <role>Top_Level</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Independent_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Review_Status__c</columns>
        <columns>MTR_Day_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS_Review__c.Independent_Review</value>
        </filters>
        <label>All Independent Reviews</label>
        <sharedTo>
            <group>CRS_Business_Admin</group>
            <group>CRS_Corporate_Level</group>
            <group>CRS_Review_Only</group>
            <group>gvwCRS_Corporate_Level</group>
            <role>Top_Level</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_gvwCRSReviews</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Review_Status__c</columns>
        <columns>MTR_Day_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS_Review__c.gvwCRS_Review</value>
        </filters>
        <label>All gvwCRS Reviews</label>
        <sharedTo>
            <group>CRS_Business_Admin</group>
            <group>CRS_Review_Only</group>
            <group>gvwCRS_Corporate_Level</group>
            <role>Top_Level</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Completed_CRSReviews</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Review_Status__c</columns>
        <columns>MTR_Day_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS_Review__c.CRS_Review</value>
        </filters>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Review Completed</value>
        </filters>
        <label>Completed CRS Reviews (Review Completed)</label>
        <sharedTo>
            <group>CRS_Business_Admin</group>
            <group>CRS_Corporate_Level</group>
            <group>CRS_Review_Only</group>
            <role>Top_Level</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Completed_gvwCRSReviews</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Review_Status__c</columns>
        <columns>MTR_Day_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS_Review__c.gvwCRS_Review</value>
        </filters>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Review Completed</value>
        </filters>
        <label>Completed gvwCRS Reviews (Rev.Completed)</label>
        <sharedTo>
            <group>CRS_Business_Admin</group>
            <group>CRS_Review_Only</group>
            <group>gvwCRS_Corporate_Level</group>
            <role>Top_Level</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>InProcess_CRSReviews</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Review_Status__c</columns>
        <columns>MTR_Day_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS_Review__c.CRS_Review</value>
        </filters>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Under Review</value>
        </filters>
        <label>CRS Reviews (Under Review)</label>
        <sharedTo>
            <group>CRS_Business_Admin</group>
            <group>CRS_Corporate_Level</group>
            <group>CRS_Review_Only</group>
            <role>Top_Level</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>InProcess_gvwCRSReviews</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Review_Status__c</columns>
        <columns>MTR_Day_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS_Review__c.gvwCRS_Review</value>
        </filters>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Under Review</value>
        </filters>
        <label>gvwCRS Reviews (Under Review)</label>
        <sharedTo>
            <group>CRS_Business_Admin</group>
            <group>CRS_Review_Only</group>
            <group>gvwCRS_Corporate_Level</group>
            <role>Top_Level</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Old_CRSReviewsArchived</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Review_Status__c</columns>
        <columns>MTR_Day_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS_Review__c.CRS_Review</value>
        </filters>
        <label>Old CRS Reviews (Archived)</label>
        <sharedTo>
            <group>CRS_Business_Admin</group>
            <group>CRS_Corporate_Level</group>
            <group>CRS_Review_Only</group>
            <role>Top_Level</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Old_IndependentReviewsArchived</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Review_Status__c</columns>
        <columns>MTR_Day_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS_Review__c.Independent_Review</value>
        </filters>
        <label>Old Independent Reviews (Archived)</label>
        <sharedTo>
            <group>CRS_Business_Admin</group>
            <group>CRS_Corporate_Level</group>
            <group>CRS_Review_Only</group>
            <group>gvwCRS_Corporate_Level</group>
            <role>Top_Level</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Old_gvwCRSReviewsArchived</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Review_Status__c</columns>
        <columns>MTR_Day_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS_Review__c.gvwCRS_Review</value>
        </filters>
        <label>Old gvwCRS Reviews (Archived)</label>
        <sharedTo>
            <group>CRS_Business_Admin</group>
            <group>CRS_Review_Only</group>
            <group>gvwCRS_Corporate_Level</group>
            <role>Top_Level</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Review Tracking #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRS Reviews</pluralLabel>
    <recordTypes>
        <fullName>CRS_Review</fullName>
        <active>true</active>
        <description>CRS submission</description>
        <label>CRS Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Independent_Review</fullName>
        <active>true</active>
        <description>Not related to any CRS or gvwCRS record</description>
        <label>Independent Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>gvwCRS_Review</fullName>
        <active>true</active>
        <description>gvwCRS submission</description>
        <label>gvwCRS Review</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>